	PR c/60784 	* c-typeck.c (push_init_level): Set constructor_designated to 	p->designated for structures.

* gcc.dg/pr60784.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@209998 138bc75d-0d04-0410-961f-82ee72b054a4